--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,6 @@
   <meta content="width=device-width,initial-scale=1" name="viewport">
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
-  <meta content="Mashup templates have been developped by Orson.io team" name="author">
 
   <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
@@ -15,7 +14,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Contact</title>  
+  <title>Contato</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -37,9 +36,8 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
-          <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./about.html" title="">02 : About me</a></li>
-          <li><a href="./contact.html" title="">03 : Contact</a></li>
+          <li><a href="./index.html" title=""> Início</a></li>
+          <li><a href="./contact.html" title=""> Contato</a></li>
         </ul>
 
 
@@ -53,7 +51,6 @@
       <div class="row">
         <div class="col-xs-12">
           <div class="section-container-spacer text-center">
-            <h1 class="h2">03 : Contact </h1>
           </div>
           
           <div class="row">
@@ -78,13 +75,13 @@
                           <span class="fa-icon">
                             <i class="fa fa-phone" aria-hidden="true"></i>
                           </span>
-                          + 55 51 9 9546-1965
+                          + 55 51 9 9546-1965 | 11 3458-7367
                         </li>
                         <li>
                           <span class="fa-icon">
                             <i class="fa fa-at" aria-hidden="true"></i>
                           </span>
-                          adm@pubpay.com.br
+                          adm@pubpay.pro | adm@pubpay.com.br
                         </li>
                         <li>
                           <span class="fa-icon">
@@ -111,7 +108,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© PUBPAY</a></p>
+          <p>Pubpay Direct Response Marketing LTDA - 48.584.242/0001-04 | © PUBPAY</a></p>
+            <p>R. Principe Humberto 112 Conj 44 Centro São Bernardo do Campo SP 09725-200</a></p>
       </div>
     </div>
   </div>
