--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-          <p>Pubpay Direct Response Marketing LTDA - 48.584.242/0001-04 | © PUBPAY</a></p>
+          <p>Pubpay Direct Response Marketing LTDA - CNPJ: 48.584.242/0001-04 | © PUBPAY</a></p>
             <p>R. Principe Humberto 112 Conj 44 Centro São Bernardo do Campo SP 09725-200</a></p>
       </div>
     </div>
